assets/css/layout/leaderboard.scss
/* User Table */
.leaderboard {
  padding: 0 30px;
  .total-photos, .total-users {
    color: #e54c54;
  }
  .users {
    margin-top: 40px;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    column-gap: 30px;
    row-gap: 30px;
    &:after {
      content: "";
      flex: auto;
    }
    .user {
      position: relative;
      display: flex;
      align-items: center;
      text-align: start;
      align-self: stretch;
      background: #ede5fa;     
      padding: 20px;  
      border-radius: 6px;
      @include box-shadow-generator(0px, 0px, 10px, 0, rgba(0, 0, 0, 0.6));
      width: 100%; 
      @include device-size(tablet-landscape) {
        width: 43%;
      }
      @include device-size(desktop) {
        width: 27%;
      }
      .user-info {
        width: 90%;
        img {
          max-width: 70px;
          border-radius: 96px;
          @include box-shadow-generator(2px, 2px, 6px, 0, rgba(0, 0, 0, 0.6));
          float: left; 
          margin-right: 20px;
        }
        h4 {
          color: #364566;
          font-size: 1.2rem;
          margin: 0;
          padding-bottom: 5px;
        }
        .profile {
          padding-bottom: 5px;
        }
        .count {
          span {
            font-size: 1.2em;
            font-weight: 600;
          }
        }
        a {
          color: #fe7676;
          text-decoration: none;
          font-weight: 500;
          &:hover {
            color: #e54c54;
          }
        }
      }
      .user-rank {        
        position: absolute;
        right: 15px;
        color: #a38ec2;
        opacity: 0.15;
        font-size:70px;
        font-weight: 800;
      }
    }
  } 
}

